<resources>
    <string name="app_name">LivePost</string>
    <string name="firebase_url">https://livepost-dev.firebaseio.com/</string>
    <string name="preference_file_key">"com.livepost.javiergzzr.PREFERENCE_FILE_KEY"</string>
    <string name="amazon_image_path">"http://sessionsandroid.s3.amazonaws.com/images/"</string>
    <string name="action_settings">Settings</string>
    <string name="add_session">Add Session</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash_screen">LivePost</string>
    <string name="title_activity_new_session">NewSession</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="num_followers_string">Followers</string>
    <string name="single_follower_string">Follower</string>
    <string name="no_results">Your search yielded no results</string>
    <!--Fragment Headers -->
    <string name="home_str">Livepost</string>
    <string name="favorites_str">Favorites</string>
    <string name="new_session_str">Create Post</string>
    <string name="profile_str">Profile</string>
    <!-- New Session -->
    <string name="lbl_description">What are you talking about?</string>
    <string name="txt_title">This is the title of your Session</string>
    <string name="lbl_category">What category does it fall into?</string>
    <string name="txt_category">This helps people find your Session</string>
    <string name="lbl_addImg">Add an image for your Session</string>
    <string name="lbl_warn">All fields are required to be completed</string>
    <string name="lbl_title">Notice:</string>
    <string name="lbl_err">An error occurred while uploading your image: Your image is too large or has an incompatible format</string>
    <!-- Categories -->
    <string-array name="array_categories">
        <item>News</item>
        <item>Entertainment</item>
        <item>Sports</item>
        <item>Technology &amp; Sciencee</item>
        <item>Business</item>
        <item>Events</item>
        <item>Lifestyle</item>
        <item>Interviews</item>
    </string-array>
    <string-array name="array_news">
        <item>Politics</item>
        <item>Opinion</item>
        <item>Breaking News</item>
        <item>Education</item>
        <item>Miscellaneous</item>
        <item>Crime</item>
        <item>Crisis</item>
        <item>Riots &amp; Protests</item>
        <item>World</item>
    </string-array>
    <string-array name="array_entertainments">
        <item>Arts &amp; Culture</item>
        <item>Books</item>
        <item>Fashion</item>
        <item>Funny</item>
        <item>Gaming</item>
        <item>Gambling</item>
        <item>Media</item>
        <item>Movies</item>
        <item>Music</item>
        <item>Wacky</item>
        <item>TV</item>
        <item>Celebrities</item>
    </string-array>
    <string-array name="array_sports">
        <item>Basketball</item>
        <item>Cricket</item>
        <item>Football</item>
        <item>Hockey</item>
        <item>Baseball</item>
        <item>Running</item>
        <item>Soccer</item>
    </string-array>
    <string-array name="array_technology">
        <item>Environment</item>
        <item>Technology</item>
        <item>Science</item>
    </string-array>
    <string-array name="array_business">
        <item>Money</item>
        <item>Economy</item>
        <item>Startups</item>
    </string-array>
    <string-array name="array_events">
        <item>Conferences</item>
        <item>Trade Shows</item>
        <item>Product Launches</item>
        <item>Weddings</item>
        <item>Music Festivals</item>
        <item>Marathons</item>
    </string-array>
    <string-array name="array_lifestyle">
        <item>Food</item>
        <item>Health</item>
        <item>Home</item>
        <item>Restaurants</item>
        <item>Hotels</item>
        <item>Religion</item>
        <item>Holidays</item>
        <item>Travel</item>
    </string-array>
    <string-array name="array_interviews">
        <item>Interviews</item>
        <item>Q&amp;A</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Enter you password again</string>
    <string name="register_check">Register New Account</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_taken_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_credentials">The username and password you entered do not match</string>
    <string name="error_service">Our authentication system is currently busy, try again later.</string>
    <string name="error_matching_password">The passwords entered do not match.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="success_registration">Account registered successfully!</string>
    <string name="success_login">Login successful!</string>

    <string name="title_activity_login_prompt">LoginPrompt</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="found_in">Found in </string>

    <!-- Edit Post -->
    <string name="edit_title">Edit Post</string>
    <string name="edit_confirm">Edit</string>
    <string name="edit_delete">Delete Post</string>
    <!-- Delete Session -->
    <string name="delete_text">Are you sure you want to delete this session?</string>
    <string name="delete_confirm">Delete</string>
    <string name="delete_cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_header_home_mode">Home Screen Presentation</string>
    <string name="pref_summary_home_mode">Select the presentation you want for the home page</string>
    <string name="pref_key_home_mode">homeMode</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
