<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.jgon.javier.sessions.activities.NewSession$PlaceholderFragment">

    <RelativeLayout
        android:id="@+id/container_img"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:background="@color/img_gray">

        <ImageView
            android:id="@+id/imgSelectPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/camera"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/lbl_addImg"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:layout_below="@+id/imgSelectPhoto"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/container_img">

        <TextView
            android:id="@+id/lblDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/lbl_description" />

        <EditText
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblDescription"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/txt_title"/>

        <TextView
            android:id="@+id/lblCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/txtTitle"
            android:text="@string/lbl_category" />

        <TextView
            android:id="@+id/txtCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/lblCategory" />

        <ExpandableListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expandableListView"
            android:layout_below="@+id/txtCategory"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


</RelativeLayout>