<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_menu"
    android:layout_width="@dimen/drawer_width"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@android:color/black"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/home_button"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_button"
                android:padding="5dp"
                android:layout_margin="8dp"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_home_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:text="@string/home_str"
                    android:textColor="@color/light_grey" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favorites_button"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_button"
                android:padding="5dp"
                android:layout_margin="8dp"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_favorite_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:text="@string/favorites_str"
                    android:textColor="@color/light_grey" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/new_session_button"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_button"
                android:padding="5dp"
                android:layout_margin="8dp"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/new_session"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_note_add_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:text="@string/new_session_str"
                    android:textColor="@color/light_grey" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_button"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_button"
                android:padding="5dp"
                android:layout_margin="8dp"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_account_circle_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:text="@string/profile_str"
                    android:textColor="@color/light_grey" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/action_login" />
    </RelativeLayout>
</android.support.v7.widget.Toolbar>
